fixed the background issue on IOS devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -47,7 +47,11 @@ div.carousel {
     }
   }
 }
-
+.nav-item{
+  .nav-link:hover {
+    color:#d3d5f3 !important;
+  }
+}
 
 a:hover{
   text-decoration: none;
